# data-master

./: .gitignore  README.md  config.yaml  pyproject.toml
scripts/: __init__.py  github_init.sh  run_clean.py  run_conflict_detection.py  run_convert.py  run_pipeline.py  run_split.py
src/: __init__.py
src/analyzer/: __init__.py  data_analyzer.py
src/config/: settings.py
src/converter/: __init__.py  format_schema.py  jsonl_converter.py
src/embedding/: __init__.py  embedding_model.py
src/filtering/: __init__.py  conflict_filter.py
src/loader/: __init__.py  excel_loader.py
src/pipelines/: __init__.py  conflict_detection_pipeline.py
src/similarity/: __init__.py  faiss_index.py
src/splitter/: __init__.py  data_splitter.py
src/validator/: __init__.py  data_validator.py
