[project]
name = "data-master"
version = "0.1.0"
description = "大模型训练数据处理与管理工具 —— 用于 Qwen3-8B 意图分类微调数据"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.4.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
run-pipeline = "scripts.run_pipeline:main"
run-convert  = "scripts.run_convert:main"
run-split    = "scripts.run_split:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
